# tmux-flash

./: Cargo.toml  LICENSE  README.md  flake.nix  tmux-flash.tmux
src/: config.rs  main.rs  search.rs  view.rs
