[package]
name = "tmux-flash"
version = "0.1.0"
edition = "2024"
description = "flash.nvim-style multi-character labeled jump for tmux copy-mode"
license = "MIT"
repository = "https://github.com/Gigoo25/tmux-flash"

[[bin]]
name = "tmux-flash"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
strip = true
